--- a/index.html
+++ b/index.html
@@ -43,28 +43,28 @@
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <ul class="cards">
           <li class="cards__item">
-            <img src="../how-to-learn/images/cards-attention.png" alt="Книга: 101 эссе, которые изменят ваше мышление"
+            <img src="./images/cards-attention.png" alt="Книга: 101 эссе, которые изменят ваше мышление"
               class="cards__image">
             <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное
               мышление.
             </p>
           <li class="cards__item">
-            <img src="../how-to-learn/images/cards-recall.png" alt="Статуя" class="cards__image">
+            <img src="./images/cards-recall.png" alt="Статуя" class="cards__image">
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           <li class="cards__item">
-            <img src="../how-to-learn/images/cards-interliving.png" alt="Много людей внутри помещения"
+            <img src="./images/cards-interliving.png" alt="Много людей внутри помещения"
               class="cards__image">
             <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           <li class="cards__item">
-            <img src="../how-to-learn/images/cards-question.png" alt="Здание и человек" class="cards__image">
+            <img src="./images/cards-question.png" alt="Здание и человек" class="cards__image">
             <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос,
               который вас действительно волнует.</p>
           <li class="cards__item">
-            <img src="../how-to-learn/images/cards-competence.png" alt="Стопка книг" class="cards__image">
+            <img src=".images/cards-competence.png" alt="Стопка книг" class="cards__image">
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется,
               что вы владеете новой темой.</p>
