--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос,
               который вас действительно волнует.</p>
           <li class="cards__item">
-            <img src=".images/cards-competence.png" alt="Стопка книг" class="cards__image">
+            <img src="./images/cards-competence.png" alt="Стопка книг" class="cards__image">
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется,
               что вы владеете новой темой.</p>
